--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -16,13 +16,17 @@
 		android:label="@string/app_name"
 		android:theme="@style/AppTheme" >
 		<activity
-			android:name="sn.soulesidibe.example.json.MainActivity"
+			android:name=".MainActivity"
 			android:label="@string/app_name" >
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
+		</activity>
+		<activity
+			android:name=".AddPersonne"
+			android:label="Ajouter une personne" >
 		</activity>
 	</application>
 
